refactor: 더 명확한 dto 구성